[package]
name = "fp-nohash-hasher"
version = "0.1.0"
edition = "2024"
authors = ["The_Fireplace <git@the-fireplace.dev>"]
license = "Apache-2.0 OR MIT"
description = "An implementation of `std::hash::Hasher` which does not hash at all."
repository = "https://github.com/The-Fireplace/fp-nohash-hasher"
readme = "README.md"
keywords = ["hash", "hasher", "hashmap", "hashset"]
exclude = [
    ".gitignore",
    ".editorconfig",
    ".github/**",
]
rust-version = "1.85"

[features]
default = ["std"]
std = []
